trunk/Archive2/81/cfcfa20c2ccdd5/output
main.cpp:1:33: error: reinterpret_cast from 'const int *' to 'int *' casts away qualifiers
int main() { int const* ptr{};  reinterpret_cast<int*>(ptr);  }
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
