trunk/Archive2/81/cfcfa20c2ccdd5/main.cpp
int main() { int const* ptr{};  reinterpret_cast<int*>(ptr);  }